--- a/components/projects.module.scss
+++ b/components/projects.module.scss
@@ -39,13 +39,10 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid vars.$color;
-  border-radius: 8px;
-  background-color: rgb(139, 127, 182);
+  background-color: rgb(223, 215, 255);
   max-width: 600px;
   font-size: 1.5rem;
-  transition: 400ms;
   h4 {
-    border-radius: 8px 8px 0 0;
     padding: 1rem 0;
     width: 100%;
     text-align: center;
@@ -54,25 +51,32 @@
   img {
     width: 100%;
   }
-  &:hover {
-    transform: translateY(-0.5rem);
-    filter: brightness(110%);
-  }
 }
 
 .content {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  gap: 0.5rem;
   padding: 1rem;
   height: 100%;
   p {
+    display: grid;
+    grid-template-columns: 1fr 10fr;
+    grid-template-rows: 1fr;
+    justify-items: flex-start;
+    gap: 1rem;
     padding: 0.5rem;
   }
 }
+p.description {
+  display: block;
+}
 
 .CTA {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   margin: 0.5rem 0;
   padding: 1rem 0;
@@ -80,14 +84,20 @@
   text-decoration: none;
   border: 1px solid white;
   border-radius: 10px;
-  background-image: linear-gradient(
-    to right,
-    #e52d27 0%,
-    hsl(358, 65%, 49%) 51%,
-    #e52d27 100%
-  );
+  background: linear-gradient(to right, hsl(2, 79%, 53%) 0%, rgb(168, 36, 40));
   box-shadow: 0px 0px 4px 0px;
   color: white;
+  overflow: hidden;
+  svg {
+    transition: 500ms;
+    transform: translateX(50px);
+  }
+
+  &:hover {
+    svg {
+      transform: translateX(70px);
+    }
+  }
 }
 
 @media (max-width: 480px) {
