--- a/components/experience.module.scss
+++ b/components/experience.module.scss
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  p {
+  > div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,7 +57,7 @@
 
 @media (min-width: 600px) {
   .experience {
-    p {
+    div {
       flex-direction: row;
     }
   }
