--- a/components/projects.module.scss
+++ b/components/projects.module.scss
@@ -39,10 +39,12 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid vars.$color;
-  background-color: rgb(223, 215, 255);
+  background-color: rgb(204, 204, 204);
   max-width: 550px;
   font-size: 1.1rem;
   h4 {
+    background-color: rgb(12, 12, 12);
+    color: rgb(247, 247, 247);
     padding: 1rem 0;
     width: 100%;
     text-align: center;
@@ -59,7 +61,7 @@
   justify-content: space-around;
   gap: 0.5rem;
   padding: 1rem;
-  height: 100%;
+  // height: 100%;
   p {
     display: grid;
     grid-template-columns: 1fr 10fr;
@@ -88,12 +90,15 @@ p.description {
   box-shadow: 0px 0px 4px 0px;
   color: white;
   overflow: hidden;
+  transition: 400ms;
   svg {
     transition: 500ms;
     transform: translateX(50px);
   }
 
   &:hover {
+    transform: translateY(-2px);
+    box-shadow: 0px 3px 6px -3px black;
     svg {
       transform: translateX(70px);
     }
