big redesign and divide into pages

--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -11,16 +11,44 @@
     animation: move 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
   }
 }
-.heroTitle {
+.heroTitleContainer {
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.heroTitle {
+  display: block;
+  font-size: 3rem;
   color: white;
-  text-shadow: hsl(2, 79%, 53%) 2px 2px 4px;
-  font-size: 4rem;
   font-weight: 100;
+  text-shadow: vars.$primary 4px 3px 4px;
+  transition: 400ms ease;
+  &:hover {
+    transform: scale(1.01);
+    text-shadow: vars.$primary 4px 3px 0px;
+  }
+}
+
+.linksContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.8rem;
+  gap: 0.6rem;
+  a {
+    padding: 0.3rem;
+    font-weight: 300;
+    color: aliceblue;
+    text-decoration: none;
+    transition: 300ms;
+    border: 2px solid transparent;
+    &:hover {
+      border: 2px solid saturate($color: vars.$primary, $amount: 80);
+    }
+  }
 }
 
 @media (min-width: 480px) {
