--- a/components/experience.module.scss
+++ b/components/experience.module.scss
@@ -6,6 +6,8 @@
   align-items: center;
   background-color: #14191d;
   color: #ddd;
+  width: 100%;
+
   padding-bottom: 5rem;
   h2 {
     font-family: Cardo;
@@ -16,7 +18,6 @@
 
 .experience {
   padding: 1rem;
-  max-width: 700px;
   display: flex;
   flex-direction: column;
   gap: 2rem;
