--- a/components/footer.module.scss
+++ b/components/footer.module.scss
@@ -16,7 +16,6 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  font-size: 1.2rem;
   width: fit-content;
   a {
     text-decoration: none;
@@ -36,6 +35,9 @@
   }
   :hover ::after {
     width: 85%;
+  }
+  @media (min-width: 500px) {
+    font-size: 1.2rem;
   }
 }
 
