--- a/components/projects.module.scss
+++ b/components/projects.module.scss
@@ -19,11 +19,14 @@
 
 .thumbnailsContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
   justify-items: center;
-  gap: 4rem;
-  margin: 0 1rem 5rem;
-  width: 90%;
+  gap: 2rem;
+  width: calc(100% - 2rem);
+  @media (min-width: 400px) {
+    width: calc(100% - 6rem);
+  }
+  margin-bottom: 4rem;
   background: radial-gradient(
     90deg,
     vars.$bg,
@@ -38,6 +41,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  // justify-content: space-between;
   border: 1px solid vars.$color;
   background-color: rgb(204, 204, 204);
   max-width: 450px;
@@ -73,6 +77,7 @@
 }
 p.description {
   display: block;
+  height: 100px;
 }
 
 .CTA {
@@ -93,7 +98,7 @@ p.description {
   transition: 400ms;
   svg {
     transition: 500ms;
-    transform: translateX(50px);
+    transform: translateX(5vw);
   }
 
   &:hover {
