--- a/components/projects.module.scss
+++ b/components/projects.module.scss
@@ -19,12 +19,12 @@
 
 .thumbnailsContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   justify-items: center;
   gap: 2rem;
   width: calc(100% - 2rem);
   @media (min-width: 400px) {
-    width: calc(100% - 6rem);
+    width: calc(100% - 1rem);
   }
   margin-bottom: 4rem;
   background: radial-gradient(
@@ -41,11 +41,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // justify-content: space-between;
   border: 1px solid vars.$color;
   background-color: rgb(204, 204, 204);
-  max-width: 450px;
-  font-size: 1.1rem;
+  max-width: 500px;
   h4 {
     background-color: rgb(12, 12, 12);
     color: rgb(247, 247, 247);
@@ -63,9 +61,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  gap: 0.5rem;
-  padding: 1rem;
-  // height: 100%;
+  padding: 0.3rem;
   p {
     display: grid;
     grid-template-columns: 1fr 10fr;
@@ -77,7 +73,7 @@
 }
 p.description {
   display: block;
-  height: 100px;
+  // height: 100px;
 }
 
 .CTA {
@@ -105,7 +101,7 @@ p.description {
     transform: translateY(-2px);
     box-shadow: 0px 3px 6px -3px black;
     svg {
-      transform: translateX(70px);
+      transform: translateX(10vw);
     }
   }
 }
