--- a/components/projects.module.scss
+++ b/components/projects.module.scss
@@ -1,114 +1,106 @@
-@use "../variables" as vars;
+// @use "../variables" as vars;
 
-.container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  background: repeating-linear-gradient(45deg, #56565630, transparent 100px);
-}
+// .title {
+//   margin-top: 3rem;
+//   padding: 2.5rem;
+//   font-family: Cardo;
+//   font-size: 3rem;
+//   font-weight: 300;
+//   color: white;
+// }
 
-.title {
-  margin-top: 3rem;
-  padding: 2.5rem;
-  font-family: Cardo;
-  font-size: 3rem;
-  font-weight: 300;
-  color: white;
-}
+// .thumbnailsContainer {
+//   display: grid;
+//   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+//   justify-items: center;
+//   gap: 2rem;
+//   width: calc(100% - 2rem);
+//   @media (min-width: 400px) {
+//     width: calc(100% - 1rem);
+//   }
+//   margin-bottom: 4rem;
+//   background: radial-gradient(
+//     90deg,
+//     vars.$bg,
+//     10%,
+//     vars.$bg-light,
+//     90%,
+//     vars.$bg
+//   );
+// }
 
-.thumbnailsContainer {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  justify-items: center;
-  gap: 2rem;
-  width: calc(100% - 2rem);
-  @media (min-width: 400px) {
-    width: calc(100% - 1rem);
-  }
-  margin-bottom: 4rem;
-  background: radial-gradient(
-    90deg,
-    vars.$bg,
-    10%,
-    vars.$bg-light,
-    90%,
-    vars.$bg
-  );
-}
+// .thumbnail {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   border: 1px solid vars.$color;
+//   background-color: rgb(204, 204, 204);
+//   max-width: 500px;
+//   h4 {
+//     background-color: rgb(12, 12, 12);
+//     color: rgb(247, 247, 247);
+//     padding: 1rem 0;
+//     width: 100%;
+//     text-align: center;
+//     font-size: 1.5rem;
+//   }
+//   img {
+//     width: 100%;
+//   }
+// }
 
-.thumbnail {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid vars.$color;
-  background-color: rgb(204, 204, 204);
-  max-width: 500px;
-  h4 {
-    background-color: rgb(12, 12, 12);
-    color: rgb(247, 247, 247);
-    padding: 1rem 0;
-    width: 100%;
-    text-align: center;
-    font-size: 1.5rem;
-  }
-  img {
-    width: 100%;
-  }
-}
+// .content {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-around;
+//   padding: 0.3rem;
+//   p {
+//     display: grid;
+//     grid-template-columns: 1fr 10fr;
+//     grid-template-rows: 1fr;
+//     justify-items: flex-start;
+//     gap: 1rem;
+//     padding: 0.5rem;
+//   }
+// }
+// p.description {
+//   display: block;
+//   // height: 100px;
+// }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 0.3rem;
-  p {
-    display: grid;
-    grid-template-columns: 1fr 10fr;
-    grid-template-rows: 1fr;
-    justify-items: flex-start;
-    gap: 1rem;
-    padding: 0.5rem;
-  }
-}
-p.description {
-  display: block;
-  // height: 100px;
-}
+// .CTA {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 100%;
+//   margin: 0.5rem 0;
+//   padding: 1rem 0;
+//   text-align: center;
+//   text-decoration: none;
+//   border: 1px solid white;
+//   border-radius: 10px;
+//   background: linear-gradient(to right, hsl(2, 79%, 53%) 0%, rgb(168, 36, 40));
+//   box-shadow: 0px 0px 4px 0px;
+//   color: white;
+//   overflow: hidden;
+//   transition: 400ms;
+//   svg {
+//     transition: 500ms;
+//     transform: translateX(5vw);
+//   }
 
-.CTA {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  margin: 0.5rem 0;
-  padding: 1rem 0;
-  text-align: center;
-  text-decoration: none;
-  border: 1px solid white;
-  border-radius: 10px;
-  background: linear-gradient(to right, hsl(2, 79%, 53%) 0%, rgb(168, 36, 40));
-  box-shadow: 0px 0px 4px 0px;
-  color: white;
-  overflow: hidden;
-  transition: 400ms;
-  svg {
-    transition: 500ms;
-    transform: translateX(5vw);
-  }
+//   &:hover {
+//     transform: translateY(-2px);
+//     box-shadow: 0px 3px 6px -3px black;
+//     svg {
+//       transform: translateX(10vw);
+//     }
+//   }
+// }
 
-  &:hover {
-    transform: translateY(-2px);
-    box-shadow: 0px 3px 6px -3px black;
-    svg {
-      transform: translateX(10vw);
-    }
-  }
-}
-
-@media (max-width: 480px) {
-  .thumbnailsContainer {
-    display: flex;
-    flex-direction: column;
-  }
-}
+// @media (max-width: 480px) {
+//   .thumbnailsContainer {
+//     display: flex;
+//     flex-direction: column;
+//   }
+// }
